--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Table of contents &mdash; NGLView 0.5.2a+219.g42fca34 documentation</title>
+    <title>Table of contents &mdash; NGLView 0.5.2a+223.g71b4fa8 documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.5.2a+219.g42fca34',
+        VERSION:     '0.5.2a+223.g71b4fa8',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="NGLView 0.5.2a+219.g42fca34 documentation" href="#" /> 
+    <link rel="top" title="NGLView 0.5.2a+223.g71b4fa8 documentation" href="#" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">NGLView 0.5.2a+219.g42fca34 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="#">NGLView 0.5.2a+223.g71b4fa8 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -292,6 +292,8 @@ available <code class="docutils literal"><span class="pre">type</span></code> an
 <span class="c1"># Or adding derived class of `nglview.Structure`</span>
 <span class="n">view</span><span class="o">.</span><span class="n">add_component</span><span class="p">(</span><span class="s1">&#39;my.ccp4&#39;</span><span class="p">)</span>
 
+<span class="c1"># add component from url</span>
+<span class="n">view</span><span class="o">.</span><span class="n">add_component</span><span class="p">(</span><span class="s1">&#39;rcsb://1tsu.pdb&#39;</span><span class="p">,</span> <span class="n">url</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 <span class="c1"># NOTE: Trajectory is a special case of component.</span>
 </pre></div>
 </div>
@@ -469,7 +471,7 @@ for <code class="docutils literal"><span class="pre">oceans16</span></code> them
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">NGLView 0.5.2a+219.g42fca34 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="#">NGLView 0.5.2a+223.g71b4fa8 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
