--- a/dev/_modules/nglview/adaptor.html
+++ b/dev/_modules/nglview/adaptor.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>nglview.adaptor &mdash; NGLView 0.5.2a+223.g71b4fa8 documentation</title>
+    <title>nglview.adaptor &mdash; NGLView 0.5.2a+278.g1b26760 documentation</title>
     
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.5.2a+223.g71b4fa8',
+        VERSION:     '0.5.2a+278.g1b26760',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="NGLView 0.5.2a+223.g71b4fa8 documentation" href="../../index.html" />
+    <link rel="top" title="NGLView 0.5.2a+278.g1b26760 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" /> 
   </head>
   <body role="document">
@@ -37,7 +37,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.5.2a+223.g71b4fa8 documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.5.2a+278.g1b26760 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -54,6 +54,7 @@
 <span class="kn">import</span> <span class="nn">os.path</span>
 <span class="kn">import</span> <span class="nn">uuid</span>
 <span class="kn">import</span> <span class="nn">tempfile</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="kn">as</span> <span class="nn">np</span>
 
 <span class="k">try</span><span class="p">:</span>
     <span class="kn">from</span> <span class="nn">cStringIO</span> <span class="kn">import</span> <span class="n">StringIO</span>
@@ -66,22 +67,23 @@
     <span class="kn">from</span> <span class="nn">urllib2</span> <span class="kn">import</span> <span class="n">urlopen</span>
 
 <span class="kn">from</span> <span class="nn">.base_adaptor</span> <span class="kn">import</span> <span class="n">Structure</span><span class="p">,</span> <span class="n">Trajectory</span>
-<span class="kn">from</span> <span class="nn">.utils.py_utils</span> <span class="kn">import</span> <span class="n">FileManager</span>
+<span class="kn">from</span> <span class="nn">.utils.py_utils</span> <span class="kn">import</span> <span class="n">FileManager</span><span class="p">,</span> <span class="n">tempfolder</span>
+<span class="kn">from</span> <span class="nn">.</span> <span class="kn">import</span> <span class="n">config</span>
 
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span>
     <span class="s1">&#39;FileStructure&#39;</span><span class="p">,</span>
     <span class="s1">&#39;TextStructure&#39;</span><span class="p">,</span>
     <span class="s1">&#39;RdkitStructure&#39;</span><span class="p">,</span>
     <span class="s1">&#39;PdbIdStructure&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;ASEStructure&#39;</span><span class="p">,</span>
     <span class="s1">&#39;SimpletrajTrajectory&#39;</span><span class="p">,</span>
     <span class="s1">&#39;MDTrajTrajectory&#39;</span><span class="p">,</span>
     <span class="s1">&#39;PyTrajTrajectory&#39;</span><span class="p">,</span>
     <span class="s1">&#39;ParmEdTrajectory&#39;</span><span class="p">,</span>
     <span class="s1">&#39;MDAnalysisTrajectory&#39;</span><span class="p">,</span>
-    <span class="s1">&#39;register_backend&#39;</span><span class="p">,</span>
-    <span class="s1">&#39;BACKENDS&#39;</span><span class="p">]</span>
-
-<span class="n">BACKENDS</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">()</span>
+    <span class="s1">&#39;HTMDTrajectory&#39;</span><span class="p">,</span>
+    <span class="s1">&#39;register_backend&#39;</span>
+<span class="p">]</span>
 
 <div class="viewcode-block" id="register_backend"><a class="viewcode-back" href="../../api.html#nglview.adaptor.register_backend">[docs]</a><span class="k">class</span> <span class="nc">register_backend</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">package_name</span><span class="p">):</span>
@@ -89,7 +91,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">package_name</span> <span class="o">=</span> <span class="n">package_name</span>
 
     <span class="k">def</span> <span class="nf">__call__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">cls</span><span class="p">):</span>
-        <span class="n">BACKENDS</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">package_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">cls</span>
+        <span class="n">config</span><span class="o">.</span><span class="n">BACKENDS</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">package_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">cls</span>
         <span class="k">return</span> <span class="n">cls</span></div>
 
 <div class="viewcode-block" id="FileStructure"><a class="viewcode-back" href="../../api.html#nglview.adaptor.FileStructure">[docs]</a><span class="k">class</span> <span class="nc">FileStructure</span><span class="p">(</span><span class="n">Structure</span><span class="p">):</span>
@@ -100,8 +102,6 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">ext</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">fm</span><span class="o">.</span><span class="n">ext</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">params</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">path</span> <span class="o">=</span> <span class="n">path</span>
-        <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">fm</span><span class="o">.</span><span class="n">is_filename</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="ne">IOError</span><span class="p">(</span><span class="s2">&quot;Not a file: &quot;</span> <span class="o">+</span> <span class="n">path</span><span class="p">)</span>
 
 <div class="viewcode-block" id="FileStructure.get_structure_string"><a class="viewcode-back" href="../../api.html#nglview.adaptor.FileStructure.get_structure_string">[docs]</a>    <span class="k">def</span> <span class="nf">get_structure_string</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">fm</span><span class="o">.</span><span class="n">read</span><span class="p">(</span><span class="n">force_buffer</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span></div></div>
@@ -146,6 +146,21 @@
 <div class="viewcode-block" id="PdbIdStructure.get_structure_string"><a class="viewcode-back" href="../../api.html#nglview.adaptor.PdbIdStructure.get_structure_string">[docs]</a>    <span class="k">def</span> <span class="nf">get_structure_string</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">url</span> <span class="o">=</span> <span class="s2">&quot;http://www.rcsb.org/pdb/files/&quot;</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">pdbid</span> <span class="o">+</span> <span class="s2">&quot;.cif&quot;</span>
         <span class="k">return</span> <span class="n">urlopen</span><span class="p">(</span><span class="n">url</span><span class="p">)</span><span class="o">.</span><span class="n">read</span><span class="p">()</span></div></div>
+
+
+<div class="viewcode-block" id="ASEStructure"><a class="viewcode-back" href="../../api.html#nglview.adaptor.ASEStructure">[docs]</a><span class="k">class</span> <span class="nc">ASEStructure</span><span class="p">(</span><span class="n">Structure</span><span class="p">):</span>
+
+    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">ase_atoms</span><span class="p">,</span> <span class="n">ext</span><span class="o">=</span><span class="s1">&#39;pdb&#39;</span><span class="p">,</span> <span class="n">params</span><span class="o">=</span><span class="p">{}):</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">ASEStructure</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="n">__init__</span><span class="p">()</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">path</span> <span class="o">=</span> <span class="s1">&#39;&#39;</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">ext</span> <span class="o">=</span> <span class="n">ext</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">params</span> <span class="o">=</span> <span class="n">params</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_ase_atoms</span> <span class="o">=</span> <span class="n">ase_atoms</span>
+
+<div class="viewcode-block" id="ASEStructure.get_structure_string"><a class="viewcode-back" href="../../api.html#nglview.adaptor.ASEStructure.get_structure_string">[docs]</a>    <span class="k">def</span> <span class="nf">get_structure_string</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">with</span> <span class="n">tempfolder</span><span class="p">():</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_ase_atoms</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="s1">&#39;tmp.pdb&#39;</span><span class="p">)</span>
+            <span class="k">return</span> <span class="nb">open</span><span class="p">(</span><span class="s1">&#39;tmp.pdb&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">read</span><span class="p">()</span></div></div>
 
 
 <span class="nd">@register_backend</span><span class="p">(</span><span class="s1">&#39;simpletraj&#39;</span><span class="p">)</span>
@@ -347,6 +362,43 @@
         <span class="c1"># extract from the stream</span>
         <span class="n">pdb_string</span> <span class="o">=</span> <span class="n">f</span><span class="o">.</span><span class="n">read</span><span class="p">()</span>
         <span class="k">return</span> <span class="n">pdb_string</span></div></div>
+
+
+<span class="nd">@register_backend</span><span class="p">(</span><span class="s1">&#39;htmd&#39;</span><span class="p">)</span>
+<div class="viewcode-block" id="HTMDTrajectory"><a class="viewcode-back" href="../../api.html#nglview.adaptor.HTMDTrajectory">[docs]</a><span class="k">class</span> <span class="nc">HTMDTrajectory</span><span class="p">(</span><span class="n">Trajectory</span><span class="p">):</span>
+    <span class="sd">&#39;&#39;&#39;HTMD adaptor.</span>
+
+<span class="sd">    Takes a Molecule object.</span>
+
+<span class="sd">    Example</span>
+<span class="sd">    -------</span>
+<span class="sd">    &gt;&gt;&gt; import nglview as nv</span>
+<span class="sd">    &gt;&gt;&gt; from htmd import Molecule</span>
+<span class="sd">    &gt;&gt;&gt; mol = Molecule(nv.datafiles.PDB)</span>
+<span class="sd">    &gt;&gt;&gt; t = nv.HTMDTrajectory(mol)</span>
+<span class="sd">    &gt;&gt;&gt; w = nv.NGLWidget(t)</span>
+<span class="sd">    &gt;&gt;&gt; w</span>
+<span class="sd">    &#39;&#39;&#39;</span>
+    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">mol</span><span class="p">):</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">mol</span> <span class="o">=</span> <span class="n">mol</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">ext</span> <span class="o">=</span> <span class="s2">&quot;pdb&quot;</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">params</span> <span class="o">=</span> <span class="p">{}</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">id</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">uuid</span><span class="o">.</span><span class="n">uuid4</span><span class="p">())</span>
+
+<div class="viewcode-block" id="HTMDTrajectory.get_coordinates"><a class="viewcode-back" href="../../api.html#nglview.adaptor.HTMDTrajectory.get_coordinates">[docs]</a>    <span class="k">def</span> <span class="nf">get_coordinates</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">index</span><span class="p">):</span>
+        <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">squeeze</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">mol</span><span class="o">.</span><span class="n">coords</span><span class="p">[:,</span> <span class="p">:,</span> <span class="n">index</span><span class="p">])</span></div>
+
+    <span class="nd">@property</span>
+    <span class="k">def</span> <span class="nf">n_frames</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">mol</span><span class="o">.</span><span class="n">numFrames</span>
+
+<div class="viewcode-block" id="HTMDTrajectory.get_structure_string"><a class="viewcode-back" href="../../api.html#nglview.adaptor.HTMDTrajectory.get_structure_string">[docs]</a>    <span class="k">def</span> <span class="nf">get_structure_string</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="kn">import</span> <span class="nn">tempfile</span>
+        <span class="n">fd</span><span class="p">,</span> <span class="n">fname</span> <span class="o">=</span> <span class="n">tempfile</span><span class="o">.</span><span class="n">mkstemp</span><span class="p">(</span><span class="n">suffix</span><span class="o">=</span><span class="s1">&#39;.pdb&#39;</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">mol</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="n">fname</span><span class="p">)</span>
+        <span class="n">pdb_string</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">fdopen</span><span class="p">(</span><span class="n">fd</span><span class="p">)</span><span class="o">.</span><span class="n">read</span><span class="p">()</span>
+        <span class="c1"># os.close( fd )</span>
+        <span class="k">return</span> <span class="n">pdb_string</span></div></div>
 </pre></div>
 
           </div>
@@ -377,13 +429,13 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.5.2a+223.g71b4fa8 documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.5.2a+278.g1b26760 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &copy; Copyright 2016, Alexander Rose, Hai Nguyen.
-      Last updated on Aug 31, 2016.
+      Last updated on Nov 07, 2016.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.1.
     </div>
   </body>
