--- a/dev/_modules/index.html
+++ b/dev/_modules/index.html
@@ -49,6 +49,7 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="nglview/adaptor.html">nglview.adaptor</a></li>
+<li><a href="nglview/contrib/movie.html">nglview.contrib.movie</a></li>
 <li><a href="nglview/layout.html">nglview.layout</a></li>
 <li><a href="nglview/player.html">nglview.player</a></li>
 <li><a href="nglview/scripts/app.html">nglview.scripts.app</a></li>
